<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_reminder_header">

        <SwitchPreferenceCompat
            app:key="@string/settings_reminder_key"
            app:summaryOff="@string/settings_reminder_off"
            app:summaryOn="@string/settings_reminder_on"
            app:title="@string/settings_reminder_title" />

        <Preference
            app:dependency="reminder"
            app:key="@string/settings_reminder_time_key"
            app:summary="@string/settings_reminder_time_default_value"
            app:title="@string/settings_reminder_time_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_theme_header">

        <ListPreference
            app:defaultValue="light_mode"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="@string/settings_theme_key"
            app:title="@string/settings_theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>